--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-6 banner-left-txt px-0">
           <div class="banner-top-section">
             <h4>Get a Proffessional Website
-              <br>Of you choice.</h4>
+              <br>Of your choice.</h4>
           </div>
           <div class="banner-bottom-section">
             <h4>Fast And Accurate with Domain Names
@@ -168,7 +168,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 service-wthree-grided color-two">
           <h4 class="mb-lg-4 mb-3">Stlylish Site for your brand</h4>
 
-          <p>We make you website stylish and charming to view.</p>
+          <p>We make your website stylish and charming to view.</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 service-wthree-grids color-three text-center">
           <img src="images/s1.png" alt="news image" class="img-fluid">
@@ -327,7 +327,7 @@
           </div>
         </div>
         <div class="col-lg-8 col-md-7 contact-form-txt my-3">
-          <form action="#" method="post">
+          <form action="mailto:ihechunnamdijohnpaul@gmail.com" method="post" enctype="text/plain">
             <div class="contact-mid">
               <div class="form-group contact-forms">
                 <input type="text" class="form-control" placeholder="Name" required="">
