--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
   <meta name="keywords" content="Grab Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
          Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
   />
+   
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-155533345-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-155533345-1');
+</script>
+
   <script>
     addEventListener("load", function () {
       setTimeout(hideURLbar, 0);
