--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ s0.parentNode.insertBefore(s1,s0);
           </div>
         </div>
         <div class="col-lg-8 col-md-7 contact-form-txt my-3">
-          <form action="mailto:ihechunnamdijohnpaul@gmail.com" method="post" enctype="text/plain">
+          <form action="" method="post" enctype="text/plain">
             <div class="contact-mid">
               <div class="form-group contact-forms">
                 <input type="text" class="form-control" placeholder="Name" required="">
