--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ s0.parentNode.insertBefore(s1,s0);
           <div class="footer-below-grids mb-3">
             <h4 class="mb-2">Address</h4>
             <p>
-              101 Chinda Estate, Off Isiaih Estate, Mile 4,
+              101 Chinda Estate, Off Isaiah Estate, Mile 4,
               <br>Port Harcourt Nigeria.</p>
           </div>
 
