--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="zxx">
 
 <head>
-  <title>IhechuNnamdi | Home :: w3layouts</title>
+  <title>IhechuNnamdi | Home </title>
   <!--meta tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -139,47 +139,7 @@ s0.parentNode.insertBefore(s1,s0);
           <img src="images/b1.jpg" alt="news image" class="img-fluid">
         </div>
         <div class="col-lg-6 about-two-grids ">
-          <h3 class="title mb-lg-4 mb-3"> Hey! Check which you like.</h3>
-          <p><a href="all/barber/index.html"> Barbing site</a></p>
-          <p><a href="all/beauty1/index.html"> Beauty site 1</a></p>
-          <p><a href="all/beauty2/index.html"> Beauty site 2</a></p>
-          <p><a href="all/beauty3/index.html"> Beauty site 3</a></p>
-          <p><a href="all/beauty4/index.html"> Beauty site 4</a></p>
-          <p><a href="all/booking2/index.html"> Booking site 1</a></p>
-          <p><a href="all/heaven_booking/index.html"> Booking site 2</a></p>
-          <p><a href="all/classy/index.html"> Classy site 1</a></p>
-          <p><a href="all/clinical/index.html"> Clinical site 1</a></p>
-          <p><a href="all/clock/index.html"> Clock site 1</a></p>
-          <p><a href="all/dance/index.html"> Dance site 1</a></p>
-          <p><a href="all/dance2/index.html"> Dance site 2</a></p>
-          <p><a href="all/facsimiles/index.html"> Facsimiles site </a></p>
-          <p><a href="all/fashion/index.html"> Fashion site 1</a></p>
-          <p><a href="all/fashion2/index.html"> Fashion site 2</a></p>
-          <p><a href="all/form/index.html"> Form site </a></p>
-          <p><a href="all/fedrick/index.html"> Fedrick site </a></p>
-          <p><a href="all/gleam/index.html"> Gleam site </a></p>
-          <p><a href="all/grab/index.html"> Grab site </a></p>
-          <p><a href="all/hair_salon/index.html"> Hair Salon site </a></p>
-          <p><a href="all/haute/index.html"> Haute site 1</a></p>
-          <p><a href="all/hb/index.html"> H_B site 1</a></p>
-          <p><a href="all/interior/index.html"> Interior Designs site </a></p>
-          <p><a href="all/let_party/index.html"> Let's Party Site</a></p>
-          <p><a href="all/look/index.html"> Looks site </a></p>
-          <p><a href="all/markedia/marketing-index.html"> Markedia site </a></p>
-          <p><a href="all/model/index.html"> Modelling site 1</a></p>
-          <p><a href="all/model2/index.html"> Modelling site 2</a></p>
-          <p><a href="all/modello/index.html"> Modelling 3</a></p>
-          <p><a href="all/music/index.html"> Music site </a></p>
-          <p><a href="all/new_trendz/index.html"> New_Trendz site </a></p>
-          <p><a href="all/pedicure/index.html"> pedicure site </a></p>
-          <p><a href="all/pervasive/index.html"> Pervasive site </a></p>
-          <p><a href="all/polish/index.html"> Polish site </a></p>
-          <p><a href="all/prestige/index.html"> Prestige site </a></p>
-          <p><a href="all/sewing/index.html"> Sewing site </a></p>
-          <p><a href="all/sliding_form/index.html"> Sliding Form site 2</a></p>
-          <p><a href="all/snazzy/index.html"> Snazzy site </a></p>
-          <p><a href="all/spa/index.html"> Spa site </a></p>
-          <p><a href="all/spot/index.html"> Spot site </a></p>
+          
 
 
           <p class="mt-lg-3 mt-2">Pick a Template which you think, can fit your test of brand. and if not there contact me to build what you need. </p>
@@ -433,7 +393,7 @@ s0.parentNode.insertBefore(s1,s0);
   <footer class="text-center py-md-4 py-3">
     <p>
       © 2020 IhechuNnamdi. All Rights Reserved | Design by
-      <a href="index.html" http://www.W3Layouts.com  target="_blank">IhechuNnamdi contributed by {W3Layouts}</a>
+      <a href="index.html" http://www.W3Layouts.com  target="_blank">Midys Coding</a>
     </p>
   </footer>
   <!--//copyright -->
